modif-sect-logo

--- a/css/screen.css
+++ b/css/screen.css
@@ -1246,6 +1246,7 @@ footer .l-footer .section__footer--right .btn--footer {
   margin: auto;
   margin-top: 5rem;
   padding-bottom: 2rem;
+  padding-top: 2rem;
   display: inline-block;
 }
 @media screen and (min-width: 768px) {
@@ -1254,7 +1255,7 @@ footer .l-footer .section__footer--right .btn--footer {
     padding-bottom: 0;
   }
 }
-/* line 573, ../sass/modules/_m-home.scss */
+/* line 574, ../sass/modules/_m-home.scss */
 .wrap .section__logo .title__liner--green p {
   margin: 2rem auto 2rem 0rem;
   color: #033752;
@@ -1263,14 +1264,14 @@ footer .l-footer .section__footer--right .btn--footer {
   line-height: 2rem;
   text-align: left;
 }
-/* line 583, ../sass/modules/_m-home.scss */
+/* line 584, ../sass/modules/_m-home.scss */
 .wrap .section__logo .title__liner--green p span {
   border-bottom: solid 3px #4eb748;
   color: #033752;
   font-style: normal;
 }
 @media screen and (min-width: 768px) {
-  /* line 573, ../sass/modules/_m-home.scss */
+  /* line 574, ../sass/modules/_m-home.scss */
   .wrap .section__logo .title__liner--green p {
     font-size: 30px;
     line-height: 2rem;
@@ -1278,27 +1279,27 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 573, ../sass/modules/_m-home.scss */
+  /* line 574, ../sass/modules/_m-home.scss */
   .wrap .section__logo .title__liner--green p {
     font-size: 30px;
     text-align: left;
     width: 30rem;
   }
 }
-/* line 603, ../sass/modules/_m-home.scss */
+/* line 604, ../sass/modules/_m-home.scss */
 .wrap .section__logo .txt--blue {
   color: #033752;
   width: 100%;
   font-size: 16px;
   line-height: 2rem;
 }
-/* line 609, ../sass/modules/_m-home.scss */
+/* line 610, ../sass/modules/_m-home.scss */
 .wrap .section__logo .txt--blue p {
   margin-top: 2rem;
   margin-left: 2rem;
 }
 @media screen and (min-width: 768px) {
-  /* line 603, ../sass/modules/_m-home.scss */
+  /* line 604, ../sass/modules/_m-home.scss */
   .wrap .section__logo .txt--blue {
     margin: 1rem 2rem 5rem auto;
     width: 80%;
@@ -1306,42 +1307,42 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 603, ../sass/modules/_m-home.scss */
+  /* line 604, ../sass/modules/_m-home.scss */
   .wrap .section__logo .txt--blue {
     margin: 2rem 3rem 8rem auto;
   }
 }
 @media screen and (min-width: 1280px) {
-  /* line 603, ../sass/modules/_m-home.scss */
+  /* line 604, ../sass/modules/_m-home.scss */
   .wrap .section__logo .txt--blue {
     margin: 2rem 7rem 8rem auto;
   }
 }
-/* line 631, ../sass/modules/_m-home.scss */
+/* line 632, ../sass/modules/_m-home.scss */
 .wrap .section__logo .cadre__logo {
   width: 100%;
   margin: 4rem auto auto auto;
   height: auto;
 }
 @media screen and (min-width: 768px) {
-  /* line 631, ../sass/modules/_m-home.scss */
+  /* line 632, ../sass/modules/_m-home.scss */
   .wrap .section__logo .cadre__logo {
     margin: 10rem auto auto auto;
     width: 100%;
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 631, ../sass/modules/_m-home.scss */
+  /* line 632, ../sass/modules/_m-home.scss */
   .wrap .section__logo .cadre__logo {
     width: 100%;
     margin: 4rem auto auto auto;
   }
 }
-/* line 649, ../sass/modules/_m-home.scss */
+/* line 650, ../sass/modules/_m-home.scss */
 .wrap .section__logo .cadre__logo .point--logo {
   width: 20%;
 }
-/* line 656, ../sass/modules/_m-home.scss */
+/* line 657, ../sass/modules/_m-home.scss */
 .wrap .section__logo .content__logo {
   width: auto;
   height: auto;
@@ -1349,48 +1350,48 @@ footer .l-footer .section__footer--right .btn--footer {
   text-align: center;
 }
 @media screen and (min-width: 768px) {
-  /* line 656, ../sass/modules/_m-home.scss */
+  /* line 657, ../sass/modules/_m-home.scss */
   .wrap .section__logo .content__logo {
     margin: -12rem auto auto auto;
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 656, ../sass/modules/_m-home.scss */
+  /* line 657, ../sass/modules/_m-home.scss */
   .wrap .section__logo .content__logo {
     margin: -16rem auto auto auto;
   }
 }
 @media screen and (min-width: 1280px) {
-  /* line 656, ../sass/modules/_m-home.scss */
+  /* line 657, ../sass/modules/_m-home.scss */
   .wrap .section__logo .content__logo {
     margin: -20rem auto auto auto;
   }
 }
 @media screen and (min-width: 1360px) {
-  /* line 656, ../sass/modules/_m-home.scss */
+  /* line 657, ../sass/modules/_m-home.scss */
   .wrap .section__logo .content__logo {
     margin: -22rem auto auto auto;
   }
 }
 @media screen and (min-width: 1420px) {
-  /* line 656, ../sass/modules/_m-home.scss */
+  /* line 657, ../sass/modules/_m-home.scss */
   .wrap .section__logo .content__logo {
     margin: -24rem auto auto auto;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 656, ../sass/modules/_m-home.scss */
+  /* line 657, ../sass/modules/_m-home.scss */
   .wrap .section__logo .content__logo {
     margin: -30rem auto auto auto;
   }
 }
 @media screen and (min-width: 1925px) {
-  /* line 656, ../sass/modules/_m-home.scss */
+  /* line 657, ../sass/modules/_m-home.scss */
   .wrap .section__logo .content__logo {
     margin: -37rem auto auto auto;
   }
 }
-/* line 686, ../sass/modules/_m-home.scss */
+/* line 687, ../sass/modules/_m-home.scss */
 .wrap .section__logo .content__logo .logo__partners {
   width: 5rem;
   height: auto;
@@ -1398,21 +1399,21 @@ footer .l-footer .section__footer--right .btn--footer {
   padding: 0.5rem;
   border-color: 3px solid #033752;
 }
-/* line 695, ../sass/modules/_m-home.scss */
+/* line 696, ../sass/modules/_m-home.scss */
 .wrap .section__logo .content__logo .logo__partners:hover {
   border: 1px solid #033752;
   border-radius: 15px;
   transform: scale(1.2);
 }
 @media screen and (min-width: 768px) {
-  /* line 686, ../sass/modules/_m-home.scss */
+  /* line 687, ../sass/modules/_m-home.scss */
   .wrap .section__logo .content__logo .logo__partners {
     width: 7rem;
     margin: -5rem auto auto  auto;
   }
 }
 @media screen and (min-width: 1280px) {
-  /* line 686, ../sass/modules/_m-home.scss */
+  /* line 687, ../sass/modules/_m-home.scss */
   .wrap .section__logo .content__logo .logo__partners {
     width: 12rem;
     margin: -10rem auto 3rem auto;
@@ -1420,20 +1421,20 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 686, ../sass/modules/_m-home.scss */
+  /* line 687, ../sass/modules/_m-home.scss */
   .wrap .section__logo .content__logo .logo__partners {
     width: 16rem;
     margin: -10rem auto 3rem auto;
     padding: 1.5rem;
   }
 }
-/* line 720, ../sass/modules/_m-home.scss */
+/* line 721, ../sass/modules/_m-home.scss */
 .wrap .section__logo .content__logo .logo__partners:hover {
   border: 2px solid #033752;
   border-radius: 15px;
   transform: scale(1.5);
 }
-/* line 734, ../sass/modules/_m-home.scss */
+/* line 735, ../sass/modules/_m-home.scss */
 .wrap .section__creation {
   height: auto;
   width: 100%;
@@ -1443,30 +1444,30 @@ footer .l-footer .section__footer--right .btn--footer {
   padding-bottom: 4rem;
 }
 @media screen and (min-width: 768px) {
-  /* line 734, ../sass/modules/_m-home.scss */
+  /* line 735, ../sass/modules/_m-home.scss */
   .wrap .section__creation {
     height: auto;
     padding: 1rem;
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 734, ../sass/modules/_m-home.scss */
+  /* line 735, ../sass/modules/_m-home.scss */
   .wrap .section__creation {
     height: auto;
     background-color: transparent;
     margin-top: -4rem;
   }
 }
-/* line 753, ../sass/modules/_m-home.scss */
+/* line 754, ../sass/modules/_m-home.scss */
 .wrap .section__creation .cadre__creation {
   display: block;
 }
-/* line 756, ../sass/modules/_m-home.scss */
+/* line 757, ../sass/modules/_m-home.scss */
 .wrap .section__creation .cadre__creation img.bg {
   display: none;
 }
 @media screen and (min-width: 1024px) {
-  /* line 756, ../sass/modules/_m-home.scss */
+  /* line 757, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation img.bg {
     display: block;
     width: 105%;
@@ -1479,12 +1480,12 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 753, ../sass/modules/_m-home.scss */
+  /* line 754, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation {
     position: relative;
   }
 }
-/* line 773, ../sass/modules/_m-home.scss */
+/* line 774, ../sass/modules/_m-home.scss */
 .wrap .section__creation .cadre__creation .desc-creation {
   height: auto;
   width: 100%;
@@ -1492,13 +1493,13 @@ footer .l-footer .section__footer--right .btn--footer {
   padding-top: 2rem;
 }
 @media screen and (min-width: 1024px) {
-  /* line 773, ../sass/modules/_m-home.scss */
+  /* line 774, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .desc-creation {
     margin: -1rem auto auto auto;
     position: absolute;
   }
 }
-/* line 788, ../sass/modules/_m-home.scss */
+/* line 789, ../sass/modules/_m-home.scss */
 .wrap .section__creation .cadre__creation .desc-creation .title__creation {
   margin: auto 1rem auto 1rem;
   color: white;
@@ -1509,7 +1510,7 @@ footer .l-footer .section__footer--right .btn--footer {
   text-align: left;
 }
 @media screen and (min-width: 768px) {
-  /* line 788, ../sass/modules/_m-home.scss */
+  /* line 789, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .desc-creation .title__creation {
     margin: auto  auto auto auto;
     text-align: left;
@@ -1517,7 +1518,7 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 788, ../sass/modules/_m-home.scss */
+  /* line 789, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .desc-creation .title__creation {
     margin: 1rem 3rem auto 0rem;
     color: white;
@@ -1527,7 +1528,7 @@ footer .l-footer .section__footer--right .btn--footer {
     line-height: 2.5rem;
   }
 }
-/* line 818, ../sass/modules/_m-home.scss */
+/* line 819, ../sass/modules/_m-home.scss */
 .wrap .section__creation .cadre__creation .desc-creation .txt__creation {
   z-index: 999;
   color: white;
@@ -1538,7 +1539,7 @@ footer .l-footer .section__footer--right .btn--footer {
   margin: 2rem 1rem -1rem 1rem;
 }
 @media screen and (min-width: 768px) {
-  /* line 818, ../sass/modules/_m-home.scss */
+  /* line 819, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .desc-creation .txt__creation {
     margin: 1rem  auto 1rem 3rem;
     position: relative;
@@ -1546,7 +1547,7 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 818, ../sass/modules/_m-home.scss */
+  /* line 819, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .desc-creation .txt__creation {
     margin: 6rem 3rem auto 28rem;
     text-align: right;
@@ -1555,7 +1556,7 @@ footer .l-footer .section__footer--right .btn--footer {
     font-size: 19px;
   }
 }
-/* line 849, ../sass/modules/_m-home.scss */
+/* line 850, ../sass/modules/_m-home.scss */
 .wrap .section__creation .cadre__creation .list {
   margin: 2rem 1rem auto 0rem;
   width: auto;
@@ -1563,7 +1564,7 @@ footer .l-footer .section__footer--right .btn--footer {
   z-index: 998;
 }
 @media screen and (min-width: 768px) {
-  /* line 849, ../sass/modules/_m-home.scss */
+  /* line 850, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .list {
     margin: auto  auto auto 3rem;
     position: absolute;
@@ -1572,34 +1573,34 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 849, ../sass/modules/_m-home.scss */
+  /* line 850, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .list {
     margin: 2rem auto auto 6rem;
     width: 80%;
     text-align: left;
   }
 }
-/* line 870, ../sass/modules/_m-home.scss */
+/* line 871, ../sass/modules/_m-home.scss */
 .wrap .section__creation .cadre__creation .list .first-list {
   width: auto;
   margin-left: 0rem;
 }
 @media screen and (min-width: 768px) {
-  /* line 870, ../sass/modules/_m-home.scss */
+  /* line 871, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .list .first-list {
     width: auto;
     margin-left: auto;
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 870, ../sass/modules/_m-home.scss */
+  /* line 871, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .list .first-list {
     width: 70%;
     margin: 15rem  1rem auto 25rem;
     line-height: 3rem;
   }
 }
-/* line 884, ../sass/modules/_m-home.scss */
+/* line 885, ../sass/modules/_m-home.scss */
 .wrap .section__creation .cadre__creation .list .first-list li {
   font-size: 18px;
   color: white;
@@ -1611,14 +1612,14 @@ footer .l-footer .section__footer--right .btn--footer {
   justify-content: flex-start;
 }
 @media screen and (min-width: 768px) {
-  /* line 884, ../sass/modules/_m-home.scss */
+  /* line 885, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .list .first-list li {
     margin: 0rem  auto auto 0rem;
     font-size: 16px;
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 884, ../sass/modules/_m-home.scss */
+  /* line 885, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .list .first-list li {
     margin: 0;
     width: auto;
@@ -1626,7 +1627,7 @@ footer .l-footer .section__footer--right .btn--footer {
     font-size: 18px;
   }
 }
-/* line 913, ../sass/modules/_m-home.scss */
+/* line 914, ../sass/modules/_m-home.scss */
 .wrap .section__creation .cadre__creation .list .first-list li .checked {
   width: 1rem;
   margin: 0.8rem  0.5rem 0rem 0rem;
@@ -1634,14 +1635,14 @@ footer .l-footer .section__footer--right .btn--footer {
   justify-content: space-between;
 }
 @media screen and (min-width: 768px) {
-  /* line 913, ../sass/modules/_m-home.scss */
+  /* line 914, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .list .first-list li .checked {
     width: 1rem;
     margin: 0rem 0.5rem auto 0rem;
     line-height: 1rem;
   }
 }
-/* line 934, ../sass/modules/_m-home.scss */
+/* line 935, ../sass/modules/_m-home.scss */
 .wrap .section__creation .cadre__creation .btn__creation {
   justify-content: center;
   margin: 2rem 2rem auto auto;
@@ -1651,38 +1652,38 @@ footer .l-footer .section__footer--right .btn--footer {
   width: auto;
 }
 @media screen and (min-width: 768px) {
-  /* line 934, ../sass/modules/_m-home.scss */
+  /* line 935, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .btn__creation {
     margin-top: 7rem;
     margin-bottom: 1rem;
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 934, ../sass/modules/_m-home.scss */
+  /* line 935, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .btn__creation {
     margin-top: -9rem;
     text-align: left;
   }
 }
-/* line 956, ../sass/modules/_m-home.scss */
+/* line 957, ../sass/modules/_m-home.scss */
 .wrap .section__creation .cadre__creation .illu-creation {
   position: relative;
   margin: 2rem  1rem 4rem 1rem;
 }
 @media screen and (min-width: 768px) {
-  /* line 956, ../sass/modules/_m-home.scss */
+  /* line 957, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .illu-creation {
     position: relative;
     margin-top: 11rem;
   }
 }
-/* line 967, ../sass/modules/_m-home.scss */
+/* line 968, ../sass/modules/_m-home.scss */
 .wrap .section__creation .cadre__creation .illu-creation .photo__creation {
   display: block;
   position: relative;
 }
 @media screen and (min-width: 768px) {
-  /* line 967, ../sass/modules/_m-home.scss */
+  /* line 968, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .illu-creation .photo__creation {
     display: block;
     margin-top: auto;
@@ -1694,7 +1695,7 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 967, ../sass/modules/_m-home.scss */
+  /* line 968, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .illu-creation .photo__creation {
     display: block;
     margin: 10rem auto auto -2rem;
@@ -1704,7 +1705,7 @@ footer .l-footer .section__footer--right .btn--footer {
     padding-top: 4rem;
   }
 }
-/* line 994, ../sass/modules/_m-home.scss */
+/* line 995, ../sass/modules/_m-home.scss */
 .wrap .section__creation .cadre__creation .illu-creation .point__creation {
   display: flex;
   width: 40%;
@@ -1712,7 +1713,7 @@ footer .l-footer .section__footer--right .btn--footer {
   margin: -6.5rem auto auto auto;
 }
 @media screen and (min-width: 768px) {
-  /* line 994, ../sass/modules/_m-home.scss */
+  /* line 995, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .illu-creation .point__creation {
     display: block;
     width: 20%;
@@ -1723,18 +1724,18 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 994, ../sass/modules/_m-home.scss */
+  /* line 995, ../sass/modules/_m-home.scss */
   .wrap .section__creation .cadre__creation .illu-creation .point__creation {
     display: block;
     margin: -8rem auto auto 23rem;
     width: 10rem;
   }
 }
-/* line 1028, ../sass/modules/_m-home.scss */
+/* line 1029, ../sass/modules/_m-home.scss */
 .wrap .section__realisations .l-section--realisations {
   grid-area: l-section-realisations;
 }
-/* line 1033, ../sass/modules/_m-home.scss */
+/* line 1034, ../sass/modules/_m-home.scss */
 .wrap .section__ajouts .l-section--ajouts {
   grid-area: l-section-ajouts;
 }
