--- a/sass/modules/_m-home.scss
+++ b/sass/modules/_m-home.scss
@@ -557,6 +557,7 @@
             margin: auto;
             margin-top: 5rem; 
             padding-bottom:2rem ;
+            padding-top: 2rem;
             display: inline-block;
             
 
