--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -18,6 +18,9 @@
 /* layout */
 @import "layout/l-layout";
 
+/* functions */
+@import "base/functions";
+
 /*modules*/
 @import "modules/_m-home";
 @import "modules/_m-home-grid";
